...
        android:layout_height="1dp"
        android:background="#de000000"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/ing_view"
        android:paddingBottom="10dp">
    </android.support.v7.widget.RecyclerView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#de000000"/>
...

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom = "3dp"
        android:clipToPadding="false"
        android:id="@+id/ins_view"
        android:paddingTop="10dp">
    </android.support.v7.widget.RecyclerView>
    </LinearLayout>



...
